--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -357,58 +357,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sdd\n",
-      "sdd\n"
+      "Матрица дополнения Х:\n",
+      "[[1 0 1 1 1]\n",
+      " [1 1 1 1 0]\n",
+      " [1 1 1 1 0]\n",
+      " [1 1 1 0 1]\n",
+      " [1 0 1 1 1]\n",
+      " [0 1 1 1 1]]\n",
+      "G = \n",
+      " [[1 0 0 0 0 0 1 0 1 1 1]\n",
+      " [0 1 0 0 0 0 1 1 1 1 0]\n",
+      " [0 0 1 0 0 0 1 1 1 1 0]\n",
+      " [0 0 0 1 0 0 1 1 1 0 1]\n",
+      " [0 0 0 0 1 0 1 0 1 1 1]\n",
+      " [0 0 0 0 0 1 0 1 1 1 1]]\n"
      ]
     }
    ],
    "source": [
-    "def generate_G(n, k):\n",
-    "    # Создаем матрицу размером (n-k) x n, состоящую из нулей\n",
-    "    X = np.zeros((n-k, n), dtype=int)\n",
+    "# Заданные параметры\n",
+    "n = 11  # Длина кодового слова\n",
+    "k = 6   # Количество информационных символов\n",
+    "d = 5   # Кодовое расстояние\n",
     "\n",
-    "    while True:\n",
-    "        all_conditions_is_valid = True\n",
+    "X = np.zeros((k, n - k), dtype=int)\n",
     "\n",
-    "        print(\"sdd\")\n",
-    "        # Заполняем матрицу X наугад\n",
-    "        for i in range(n - k):\n",
-    "            for j in range(n):\n",
-    "                print(\"sdd\")\n",
-    "                X[i][j] = np.random.choice([0, 1], size=1)\n",
-    "        print(\"wwwwww\")\n",
-    "        # Проверяем условие\n",
-    "        # а) было не меньше 4 единиц в каждой строке;\n",
-    "        for  i in range(n - k):\n",
-    "            if sum(X[i]) < 4:\n",
-    "                all_conditions_is_valid = False\n",
-    "        print(\"ddddd   \")\n",
-    "        # Условия б, в, г\n",
-    "        for i in range(n - k):\n",
-    "            for j in range(i + 1, n - k):\n",
-    "                print(((X[i] + X[j]) % 2))\n",
-    "                if sum((X[i] + X[j]) % 2) < 3:\n",
-    "                    all_conditions_is_valid = False\n",
-    "                for v in range(j + 1, n - k):\n",
-    "                    if sum((X[i] + X[j] + X[v]) % 2) < 2:\n",
-    "                        all_conditions_is_valid = False\n",
-    "                    for m in range(v + 1, n - k):\n",
-    "                        if sum((X[i] + X[j] + X[v] + X[m]) % 2) < 1:\n",
-    "                            all_conditions_is_valid = False\n",
-    "        if all_conditions_is_valid:\n",
-    "            return np.hstack((np.eye(n-k, dtype=int), X))\n",
+    "for i in range(k):\n",
+    "    row = X[i]\n",
+    "    num_ones = 0\n",
+    "    while num_ones < 4:\n",
+    "        col = np.random.randint(0, n - k)\n",
+    "        if row[col] == 0:\n",
+    "            row[col] = 1\n",
+    "            num_ones += 1\n",
     "\n",
-    "n = 11\n",
-    "k = 6\n",
+    "print(\"Матрица дополнения Х:\")\n",
+    "print(X)\n",
     "\n",
-    "G = generate_G(n, k)\n",
+    "G = np.hstack((np.eye(k, dtype=int), X))\n",
+    "\n",
+    "\n",
     "print('G = \\n',G)\n"
    ]
   },
@@ -421,10 +416,305 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H = \n",
+      " [[1. 0. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 0.]\n",
+      " [1. 1. 1. 1. 0.]\n",
+      " [1. 1. 1. 0. 1.]\n",
+      " [1. 0. 1. 1. 1.]\n",
+      " [0. 1. 1. 1. 1.]\n",
+      " [1. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = G[:,k:]\n",
+    "H = np.vstack((X, np.eye(n-k)))\n",
+    "print('H = \\n',H)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.8 Сформировать  таблицу  синдромов  для  всех  однократных  и \n",
+    "двукратных ошибок. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ошибка: (1.0, 0.0, 1.0, 1.0, 1.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0)\n",
+      "Ошибка: (0.0, 1.0, 0.0, 0.0, 1.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0)\n",
+      "Ошибка: (0.0, 1.0, 0.0, 1.0, 0.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1.0, 0.0)\n",
+      "Ошибка: (0.0, 0.0, 0.0, 0.0, 0.0)  Синдром: (0.0, 1.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0)\n",
+      "Ошибка: (1.0, 1.0, 0.0, 0.0, 0.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 1.0, 0.0, 0.0, 0.0)\n",
+      "Ошибка: (0.0, 0.0, 1.0, 1.0, 1.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1.0, 0.0, 0.0, 0.0)\n",
+      "Ошибка: (1.0, 1.0, 1.0, 1.0, 1.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 1.0, 0.0, 0.0, 0.0, 0.0)\n",
+      "Ошибка: (1.0, 0.0, 0.0, 1.0, 1.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0)\n",
+      "Ошибка: (1.0, 0.0, 1.0, 0.0, 1.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0)\n",
+      "Ошибка: (1.0, 0.0, 1.0, 1.0, 0.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0)\n",
+      "Ошибка: (1.0, 1.0, 1.0, 1.0, 0.0)  Синдром: (0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0)\n",
+      "Ошибка: (0.0, 0.0, 0.0, 1.0, 1.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 1.0)\n",
+      "Ошибка: (1.0, 0.0, 0.0, 0.0, 1.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0)\n",
+      "Ошибка: (0.0, 1.0, 1.0, 1.0, 0.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 1.0)\n",
+      "Ошибка: (1.0, 1.0, 0.0, 1.0, 0.0)  Синдром: (0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0)\n",
+      "Ошибка: (1.0, 1.0, 1.0, 0.0, 0.0)  Синдром: (0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0)\n",
+      "Ошибка: (1.0, 1.0, 1.0, 0.0, 1.0)  Синдром: (0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0)\n",
+      "Ошибка: (1.0, 0.0, 0.0, 1.0, 0.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0)\n",
+      "Ошибка: (0.0, 1.0, 1.0, 0.0, 1.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0, 0.0)\n",
+      "Ошибка: (1.0, 1.0, 0.0, 0.0, 1.0)  Синдром: (0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0)\n",
+      "Ошибка: (0.0, 1.0, 1.0, 1.0, 1.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0)\n",
+      "Ошибка: (0.0, 1.0, 0.0, 1.0, 1.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0)\n",
+      "Ошибка: (1.0, 0.0, 0.0, 0.0, 0.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0)\n",
+      "Ошибка: (1.0, 0.0, 1.0, 0.0, 0.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1.0, 0.0, 0.0)\n",
+      "Ошибка: (0.0, 1.0, 0.0, 0.0, 0.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0)\n",
+      "Ошибка: (0.0, 1.0, 1.0, 0.0, 0.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 1.0, 0.0, 0.0)\n",
+      "Ошибка: (0.0, 0.0, 1.0, 0.0, 0.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0)\n",
+      "Ошибка: (0.0, 0.0, 1.0, 1.0, 0.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 1.0, 0.0)\n",
+      "Ошибка: (0.0, 0.0, 1.0, 0.0, 1.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1.0)\n",
+      "Ошибка: (0.0, 0.0, 0.0, 1.0, 0.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0)\n",
+      "Ошибка: (0.0, 0.0, 0.0, 0.0, 1.0)  Синдром: (0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Создаем таблицу синдромов для всех двухкратных ошибок\n",
+    "syndrome_map_for_1_and_2_errors = {}\n",
+    "\n",
+    "# Перебираем все возможные однократные ошибки\n",
+    "for i in range(n):\n",
+    "    error = np.zeros(n)\n",
+    "    error[i] = 1\n",
+    "        \n",
+    "    # Вычисляем синдром для данной ошибки\n",
+    "    syndrome = np.dot(error, H) % 2\n",
+    "        \n",
+    "    # Добавляем синдром в таблицу\n",
+    "    syndrome_map_for_1_and_2_errors[tuple(syndrome)] = tuple(error)\n",
+    "    for j in range(i + 1, n):\n",
+    "        error = np.zeros(n)\n",
+    "        error[i] = 1\n",
+    "        error[j] = 1\n",
+    "        \n",
+    "        # Вычисляем синдром для данной ошибки\n",
+    "        syndrome = np.dot(error, H) % 2\n",
+    "        \n",
+    "        # Добавляем синдром в таблицу\n",
+    "        syndrome_map_for_1_and_2_errors[tuple(syndrome)] = tuple(error)\n",
+    "\n",
+    "# Выводим таблицу синдромов\n",
+    "for error, syndrome in syndrome_map_for_1_and_2_errors.items():\n",
+    "    print(f\"Ошибка: {error}  Синдром: {syndrome}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.9. Сформировать кодовое слово длины n из слова длины k. Внести \n",
+    "однократную ошибку в сформированное слово. Вычислить синдром, \n",
+    "исправить ошибку с использованием таблицы синдромов. Убедиться \n",
+    "в правильности полученного слова."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 0. 1. 1. 1.]\n",
+      "Ошибка не была исправлена.\n",
+      "Исходное кодовое слово: [1 0 1 1 0 1 1 1 0 1 1]\n",
+      "Кодовое слово с ошибкой: [0 0 1 1 0 1 1 1 0 1 1]\n",
+      "Исправленное кодовое слово: [0 0 1 1 1 1 1 1 0 1 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = np.array([1, 0, 1, 1, 0, 1])\n",
+    "\n",
+    "# Формируем кодовое слово длины n\n",
+    "code_word = np.dot(word, G) % 2\n",
+    "\n",
+    "# Вносим однократную ошибку\n",
+    "error_index = 0  # Индекс бита, в который вносим ошибку\n",
+    "code_word_with_error = code_word.copy()\n",
+    "code_word_with_error[error_index] = (code_word_with_error[error_index] + 1) % 2\n",
+    "\n",
+    "# Вычисляем синдром\n",
+    "syndrome = np.dot(code_word_with_error, H) % 2\n",
+    "print(syndrome)\n",
+    "# Исправляем ошибку, используя таблицу синдромов\n",
+    "corrected_code_word = None\n",
+    "if tuple(syndrome) in syndrome_map_for_1_and_2_errors:\n",
+    "    corrected_code_word = code_word_with_error.copy()\n",
+    "    for i, bit in enumerate(syndrome_map_for_1_and_2_errors[tuple(syndrome)]):\n",
+    "        corrected_code_word[i] = (corrected_code_word[i] + bit) % 2\n",
+    "else:\n",
+    "    print(\"Ошибка не может быть исправлена.\")\n",
+    "\n",
+    "# Убеждаемся в правильности полученного слова\n",
+    "if np.array_equal(code_word, corrected_code_word):\n",
+    "    print(\"Ошибку успешно исправлено.\")\n",
+    "else:\n",
+    "    print(\"Ошибка не была исправлена.\")\n",
+    "\n",
+    "print(\"Исходное кодовое слово:\", code_word)\n",
+    "print(\"Кодовое слово с ошибкой:\", code_word_with_error)\n",
+    "print(\"Исправленное кодовое слово:\", corrected_code_word)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.10. Сформировать кодовое слово длины n из слова длины k. Внести \n",
+    "двукратную ошибку в сформированное слово. Вычислить синдром, \n",
+    "исправить ошибку с использованием таблицы синдромов. Убедиться \n",
+    "в правильности полученного слова."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 1. 0. 0. 1.]\n",
+      "Ошибка не была исправлена.\n",
+      "Исходное кодовое слово: [1 0 1 1 0 1 1 1 0 1 1]\n",
+      "Кодовое слово с ошибкой: [1 0 0 1 1 1 1 1 0 1 1]\n",
+      "Исправленное кодовое слово: [1 0 0 1 1 1 1 0 0 1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = np.array([1, 0, 1, 1, 0, 1])\n",
+    "\n",
+    "# Формируем кодовое слово длины n\n",
+    "code_word = np.dot(word, G) % 2\n",
+    "\n",
+    "# Вносим двухкратную ошибку\n",
+    "error_index_1 = 2  # Индекс первого бита, в который вносим ошибку\n",
+    "error_index_2 = 4  # Индекс второго бита, в который вносим ошибку\n",
+    "code_word_with_error = code_word.copy()\n",
+    "code_word_with_error[error_index_1] = (code_word_with_error[error_index_1] + 1) % 2\n",
+    "code_word_with_error[error_index_2] = (code_word_with_error[error_index_2] + 1) % 2\n",
+    "\n",
+    "# Вычисляем синдром\n",
+    "syndrome = np.dot(code_word_with_error, H) % 2\n",
+    "print(syndrome)\n",
+    "# Исправляем ошибку, используя таблицу синдромов\n",
+    "corrected_code_word = None\n",
+    "if tuple(syndrome) in syndrome_map_for_1_and_2_errors:\n",
+    "    corrected_code_word = code_word_with_error.copy()\n",
+    "    for i, bit in enumerate(syndrome_map_for_1_and_2_errors[tuple(syndrome)]):\n",
+    "        corrected_code_word[i] = (corrected_code_word[i] + bit) % 2\n",
+    "else:\n",
+    "    print(\"Ошибка не может быть исправлена.\")\n",
+    "\n",
+    "# Убеждаемся в правильности полученного слова\n",
+    "if np.array_equal(code_word, corrected_code_word):\n",
+    "    print(\"Ошибку успешно исправлено.\")\n",
+    "else:\n",
+    "    print(\"Ошибка не была исправлена.\")\n",
+    "\n",
+    "print(\"Исходное кодовое слово:\", code_word)\n",
+    "print(\"Кодовое слово с ошибкой:\", code_word_with_error)\n",
+    "print(\"Исправленное кодовое слово:\", corrected_code_word)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.11. Сформировать кодовое слово длины n из слова длины k. Внести \n",
+    "трёхкратную ошибку в сформированное слово. Вычислить синдром, \n",
+    "исправить  ошибку  с  использованием  таблицы  синдромов. \n",
+    "Убедиться, что полученное слово отличается от отправленного. \n",
+    " \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 1. 1. 0. 1.]\n",
+      "Ошибка не была исправлена.\n",
+      "Исходное кодовое слово: [1 0 1 1 0 1 1 1 0 1 1]\n",
+      "Кодовое слово с ошибкой: [1 0 0 1 1 1 1 1 1 1 1]\n",
+      "Исправленное кодовое слово: [1 0 0 1 1 0 1 1 1 0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = np.array([1, 0, 1, 1, 0, 1])\n",
+    "\n",
+    "# Формируем кодовое слово длины n\n",
+    "code_word = np.dot(word, G) % 2\n",
+    "\n",
+    "# Вносим трехкратную ошибку\n",
+    "error_index_1 = 2  # Индекс первого бита, в который вносим ошибку\n",
+    "error_index_2 = 4  # Индекс второго бита, в который вносим ошибку\n",
+    "error_index_3 = 8\n",
+    "code_word_with_error = code_word.copy()\n",
+    "code_word_with_error[error_index_1] = (code_word_with_error[error_index_1] + 1) % 2\n",
+    "code_word_with_error[error_index_2] = (code_word_with_error[error_index_2] + 1) % 2\n",
+    "code_word_with_error[error_index_3] = (code_word_with_error[error_index_3] + 1) % 2\n",
+    "\n",
+    "# Вычисляем синдром\n",
+    "syndrome = np.dot(code_word_with_error, H) % 2\n",
+    "print(syndrome)\n",
+    "# Исправляем ошибку, используя таблицу синдромов\n",
+    "corrected_code_word = None\n",
+    "if tuple(syndrome) in syndrome_map_for_1_and_2_errors:\n",
+    "    corrected_code_word = code_word_with_error.copy()\n",
+    "    for i, bit in enumerate(syndrome_map_for_1_and_2_errors[tuple(syndrome)]):\n",
+    "        corrected_code_word[i] = (corrected_code_word[i] + bit) % 2\n",
+    "else:\n",
+    "    print(\"Ошибка не может быть исправлена.\")\n",
+    "\n",
+    "# Убеждаемся в правильности полученного слова\n",
+    "if np.array_equal(code_word, corrected_code_word):\n",
+    "    print(\"Ошибку успешно исправлено.\")\n",
+    "else:\n",
+    "    print(\"Ошибка не была исправлена.\")\n",
+    "\n",
+    "print(\"Исходное кодовое слово:\", code_word)\n",
+    "print(\"Кодовое слово с ошибкой:\", code_word_with_error)\n",
+    "print(\"Исправленное кодовое слово:\", corrected_code_word)"
+   ]
   }
  ],
  "metadata": {
